--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,1 +1,11 @@
-
+name: First Workflow
+on: workflow_dispatch
+jobs:
+  first-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print greeting
+        run: echo "Hi Abhi"
+      - name: say Goodbye
+        run: echo "See you soon"
+      
